# card_price_trading

./: Dockerfile  README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: tests.yml
src/web_scraper/: pokemontcg_monitor.py
tests/: test_pokemontcg_monitor.py
