[project]
name = "card-price-trading"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "ebay-rest>=1.0.14",
    "httpx>=0.28.1",
    "ipykernel>=6.30.1",
    "pip>=25.2",
    "pokemontcgsdk>=3.4.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "requests>=2.32.5",
    "respx>=0.22.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "respx>=0.22.0",
]
